--- a/ansible/inventories/group_vars/awx.yml
+++ b/ansible/inventories/group_vars/awx.yml
@@ -3,8 +3,9 @@ awx:
   tz: "Asia/Tokyo"
   work_user: "ec2-user"
   work_dir: "/home/ec2-user/awx"
-  # 認証鍵を暗号化するための鍵
+  # AWXに登録した認証鍵を暗号化するための鍵
   secret_key: "XOVUutEJr1yGg2HK"
+  project_dir: "project"
   web:
     username: "admin"
     password: "iryKdFVqWtNZXTNK"
