--- a/ansible/roles/awx/templates/all.j2.yml
+++ b/ansible/roles/awx/templates/all.j2.yml
@@ -1,6 +1,7 @@
 ---
 # installer用インベントリ変数を上書きする
 # https://github.com/ansible/awx/blob/devel/installer/inventory
+project_data_dir: {{ awx.work_dir }}/{{ awx.project_dir }}
 postgres_data_dir: {{ awx.work_dir }}/{{ awx.pg.data_dir }}
 host_port: {{ awx.web.port }}
 pg_username: {{ awx.pg.username }}
